# videos

./: .gitignore  Makefile  README.md  pyproject.toml
codigos/audio_e_telefone/: app.py  functions.py  workflow.ipynb
codigos/biblioteca_repenseai/: capacidades.ipynb
codigos/biblioteca_repenseai/workflows/: conditonal.ipynb  optimizer.ipynb  orchestrator.ipynb  parallelization.ipynb  routing.ipynb
codigos/fundamentos_ai/: characters.py  fundamentos.ipynb  rag.py
codigos/fundamentos_ai/servers/: bmi.py  memory.py
codigos/matematica/: benchmark.ipynb
codigos/ocr/: .env.example  README.md  app.py  functions.py  notebook.ipynb  prompts.py  requirements.txt  testing.ipynb
codigos/ocr/pages/: experiment.py
codigos/prompt_engineering/: probabilidades.ipynb
