[project]
name = "videos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.47.1",
    "boto3>=1.36.24",
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.5.0",
    "mistralai==1.8.1",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "pdf2image>=1.17.0",
    "python-docx>=1.1.2",
    "repenseai==4.0.13",
    "streamlit>=1.44.1",
]
